--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,18 +66,24 @@ header .icone i {
 header .icone:hover {
   color: var(--gray-dark);
 }
-header ul {
+header .header-menu {
   display: flex;
   flex-flow: row nowrap;
 }
-header ul li {
+header .header-menu li {
   font-family: var(--font-title);
   margin-right: 1rem;
   font-size: 2rem;
+  padding: 1.5rem 1rem;
+  border-radius: 5px;
+  transition: all 0.3s;
 }
-header ul li:hover {
-  text-decoration: underline;
+header .header-menu li:hover {
   opacity: 0.8;
+  background: var(--primary-dark);
+}
+header .header-menu .active {
+  background: var(--primary-dark);
 }
 
 footer {
