--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -3,6 +3,7 @@
   --font-title: "Cinzel", serif;
   --background-lite: #ecf0f1;
   --primary: #34495e;
+  --primary-dark: #2c3e50;
   --text: #333;
   --text-light: white;
   --light-gray: #ecf0f1
