--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,80 +1,87 @@
-@use 'reset';
-@use 'base';
-@use 'media-queries' as *;
-@use 'utilities';
+@use "reset";
+@use "base";
+@use "media-queries" as *;
+@use "utilities";
+@use "add-article";
 
-.container{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-header{
-    background-color: var(--primary);
-    color: var(--text-light);
-    padding: 2.5rem;
-    box-shadow: var(--shadow);
+header {
+  background-color: var(--primary);
+  color: var(--text-light);
+  padding: 2.5rem;
+  box-shadow: var(--shadow);
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  .icone {
+    font-size: 3.5rem;
+    i {
+      font-size: 4rem;
+    }
+    font-family: var(--font-title);
+    &:hover {
+      color: var(--gray-dark);
+    }
+  }
+  .header-menu {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    .icone{
-        font-size: 3.5rem;
-        i{
-            font-size: 4rem;
-        }
-        font-family: var(--font-title);
-        &:hover{
-            color: var(--gray-dark);
-        } 
+    li {
+      font-family: var(--font-title);
+      margin-right: 1rem;
+      font-size: 2rem;
+      padding: 1.5rem 1rem;
+      border-radius: 5px;
+      transition: all 0.3s;
+      &:hover {
+        // text-decoration: underline;
+        opacity: 0.8;
+        background: var(--primary-dark);
+      }
     }
-    ul{
-        display: flex;
-        flex-flow: row nowrap;
-        li{
-            font-family: var(--font-title);
-            margin-right: 1rem;
-            font-size: 2rem;
-            &:hover{
-                text-decoration: underline;
-                opacity: 0.8;
-            }
-        }
+    .active {
+      background: var(--primary-dark);
     }
+  }
 }
 
-footer{
-    background-color: var(--primary);
-    color: var(--text-light);
-    padding: 1.5rem;
+footer {
+  background-color: var(--primary);
+  color: var(--text-light);
+  padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .copyright {
+    .hearth {
+      color: var(--danger);
+    }
+    .link-name {
+      font-family: var(--font-title);
+      &:hover {
+        color: var(--gray-dark);
+      }
+    }
+  }
+  .ctn-social {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .copyright{
-        .hearth{
-            color: var(--danger);
-        }
-        .link-name{
-            font-family: var(--font-title);
-            &:hover{
-                color: var(--gray-dark)
-            }
-        }
+    li {
+      font-size: 2.5rem;
+      margin-right: 1rem;
+      &:hover {
+        color: var(--gray-dark);
+      }
     }
-    .ctn-social{
-        display: flex;
-        li{
-            font-size: 2.5rem;
-            margin-right: 1rem;
-            &:hover{
-                color: var(--gray-dark);
-            }
-        }
-    }
-
+  }
 }
 
-.content{
-    flex: 1;
-    // background: var(--background-lite);
+.content {
+  flex: 1;
+  // background: var(--background-lite);
 }
