--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,6 +1,12 @@
-.uppercase{
-    text-transform: uppercase;
+.uppercase {
+  text-transform: uppercase;
 }
-.mr-5{
-    margin-right: 0.5rem;
+.mr-5 {
+  margin-right: 0.5rem;
+}
+.p-20 {
+  padding: 2rem;
+}
+.p-10 {
+  padding: 1rem;
 }
