--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,22 +1,65 @@
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
-body{
-    font-size: 1.6rem;
-    color: var(--text);
+body {
+  font-size: 1.6rem;
+  color: var(--text);
 }
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-h1, h2, h3, h4, h5, h6{
-    font-family: var(--font-title);
-    margin-bottom: 1.5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-title);
+  margin-bottom: 1.5rem;
 }
-p{
-    font-family: var(--font-text);
-    margin-bottom: 0.5rem;
+p {
+  font-family: var(--font-text);
+  margin-bottom: 0.5rem;
 }
-a{
-    text-decoration: none;
-    color: var(--font-text);
+a {
+  text-decoration: none;
+  color: var(--font-text);
+}
+
+.btn {
+  padding: 1.5rem 1.5rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.5rem;
+  &-primary {
+    background-color: var(--primary);
+    color: var(--text-light);
+    transition: all 0.3s;
+    &:hover {
+      background: var(--primary-dark);
+      box-shadow: var(--shadow);
+    }
+  }
+  &-secondary {
+    background: white;
+    border: 1px solid var(--primary);
+    color: var(--primary-dark);
+    transition: all 0.3s;
+    &:hover {
+      border: 1px solid var(--primary-dark);
+      color: var(--primary-dark);
+      box-shadow: var(--shadow);
+    }
+  }
+}
+
+input,
+textarea,
+select {
+  border-radius: 5px;
+  border: var(--border);
+  padding: 0.5rem;
 }
