--- a/scss/_add-article.scss
+++ b/scss/_add-article.scss
@@ -16,6 +16,10 @@
     textarea {
       height: 25rem;
     }
+    .text-error{
+      color: var(--danger);
+      font-size: 1rem;
+    }
   }
   .form-action {
     display: flex;
