--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -10,3 +10,9 @@
 .p-10 {
   padding: 1rem;
 }
+.block{
+  background: var(white);
+  border-radius: 5px;
+  box-shadow: var(--shadow);
+  // border: 1px solid var(--border);
+}
