Ajout de la modification d'article

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,6 +66,13 @@ a {
   color: var(--primary-dark);
   box-shadow: var(--shadow);
 }
+.btn-warning {
+  background: var(--edit);
+  transition: all 0.3s;
+}
+.btn-warning:hover {
+  background: var(--edit-dark);
+}
 
 input,
 textarea,
