--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,52 +6,16 @@
 @use "index";
 @use "show-article";
 @use "edit-article";
+@use "header";
+@use "profil";
+@use "auth-login";
+@use "auth-logout";
+@use "auth-register";
 
 .container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-header {
-  background-color: var(--primary);
-  color: var(--text-light);
-  padding: 2.5rem;
-  box-shadow: var(--shadow);
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-  .icone {
-    font-size: 3.5rem;
-    i {
-      font-size: 4rem;
-    }
-    font-family: var(--font-title);
-    &:hover {
-      color: var(--gray-dark);
-    }
-  }
-  .header-menu {
-    display: flex;
-    flex-flow: row nowrap;
-    li {
-      font-family: var(--font-title);
-      margin-right: 1rem;
-      font-size: 2rem;
-      padding: 1.5rem 1rem;
-      border-radius: 5px;
-      transition: all 0.3s;
-      &:hover {
-        // text-decoration: underline;
-        opacity: 0.8;
-        background: var(--primary-dark);
-      }
-    }
-    .active {
-      background: var(--primary-dark);
-    }
-  }
 }
 
 footer {
