--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -6,7 +6,7 @@
   --primary-dark: #2c3e50;
   --text: #333;
   --text-light: white;
-  --light-gray: #ecf0f1
+  --light-gray: #ecf0f1;
   --gray: #bdc3c7;
   --validate: #3498db;
   --validate-dark: #2980b9;
@@ -19,6 +19,7 @@
   --border: 1px solid #95a5a6;
   --shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --gray-dark: #7f8c8d;
+  --border: 1px solid var(--gray);
 }
 
 /*# sourceMappingURL=variables.css.map */
