--- a/scss/_show-article.scss
+++ b/scss/_show-article.scss
@@ -1,33 +1,36 @@
+.container-article {
+  &-link {
+    font-size: 1.7rem;
+    font-weight: 700;
+    text-decoration: underline;
+    margin-bottom: 1rem;
+    display: block;
+  }
+  padding-bottom: 10rem;
+  &-cover {
+    height: 50rem;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    border-radius: 0.5rem;
+  }
+  &-title {
+    margin: 3rem 0;
+    text-align: left;
+    font-size: 5rem;
+    font-weight: 400;
+  }
+  &-separator {
+  }
+  &-category {
+  }
+  &-content {
+    white-space: pre-wrap;
+  }
+}
 
-.container-article{
-    &-link{
-        font-size: 1.7rem;
-        font-weight: 700;
-        text-decoration: underline;
-        margin-bottom: 1rem;
-        display: block;
-    }
-    padding-bottom: 10rem;
-    &-cover{
-        height: 50rem;
-        background-size: cover;
-        background-position: center;
-        width: 100%;
-        border-radius: 0.5rem; 
-    }
-    &-title{
-        margin: 3rem 0;
-        text-align: left;
-        font-size: 5rem;
-        font-weight: 400;
-    }
-    &-separator{
-
-    }
-    &-ccategory{
-
-    }
-    &-content{
-        white-space: pre-wrap;
-    }
+.article-author {
+  font-size: 1.3rem;
+  font-style: italic;
+  text-align: end;
 }
