--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,7 @@ header {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   .icone {
     font-size: 3.5rem;
     i {
@@ -16,6 +17,9 @@ header {
     &:hover {
       color: var(--gray-dark);
     }
+  }
+  .header-mobile{
+    display: none;
   }
   .header-menu {
     display: flex;
@@ -49,5 +53,31 @@ header {
       align-items: center;
       justify-content: center;
     }
+  }
+}
+.header-mobile-list{
+  display: none;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background: var(--background-light);
+  color: var(--text-color);
+  li{
+    padding: 1rem;
+    &:active{
+      color: white;
+      font-weight: 700;
+    }
+  }
+}
+.show{
+  display: block;
+}
+@media only screen and (max-width: 800px){
+  .header-menu{
+    display: none;
+  }
+  .header-mobile{
+    display: block;
   }
 }
