--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -118,6 +118,15 @@ a {
   margin-top: 1rem;
 }
 
+@media only screen and (max-width: 800px) {
+  .category-container {
+    display: none;
+  }
+  .articles-container {
+    flex-flow: column;
+    align-items: unset;
+  }
+}
 .articles-container {
   display: flex;
   flex-flow: row wrap;
@@ -397,6 +406,19 @@ footer .ctn-social li:hover {
 .cat-active {
   color: var(--primary);
   font-weight: 700;
+}
+
+@media only screen and (max-width: 800px) {
+  .form-container {
+    width: 100%;
+    padding: 1.5rem;
+  }
+  .article-list ul li {
+    flex-flow: column;
+  }
+  .article-action {
+    margin-top: 1rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
