--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -16,6 +16,15 @@
     }
 }
 
+@media only screen and (max-width: 800px) {
+    .category-container{
+        display: none;
+    }
+    .articles-container{
+        flex-flow: column;
+        align-items: unset;
+    }
+}
 .articles-container{
     display: flex;
     flex-flow: row wrap;
