--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -80,3 +80,15 @@ footer {
   font-weight: 700;
 }
 
+@media only screen and (max-width: 800px) {
+  .form-container{
+    width: 100%;
+    padding: 1.5rem;
+  }
+  .article-list ul li{
+    flex-flow: column;
+  }
+  .article-action{
+    margin-top: 1rem;
+  }
+}
